[package]
name = "rusty-valkey-forward-auth"
version = "0.1.1"
edition = "2024"

[dependencies]
tokio = { version = "1.50", features = ["full"] }
tower = { version = "0.5.3", features = ["full"] }
tower-http = { version = "0.6.8", features = ["full"] }
fred = { version = "10.1", features = ["i-scripts"] }
confique = { version = "0.4", features = ["toml"] }
anyhow = "1.0.102"
time = { version = "0.3.47", features = ["formatting"] }
axum = { version = "0.8.8", features = ["macros", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.149"
utoipa = { version = "5.4", features = ["axum_extras"] }
utoipa-scalar = { version = "0.3", features = ["axum"] }
rand = { version = "0.10", default-features = false, features = [
  "std",
  "sys_rng",
] }
tracing = "0.1.44"
blake3 = "1.8.3"
hex = "0.4"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "fmt"] }
http = "1.4.0"
base64 = "0.22"
tower-helmet = "0.3"
tower-oauth2-resource-server = "0.11.1"

[dev-dependencies]
serial_test = "3.4.0"
